--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,14 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
+    <dimen name="logo">60dp</dimen>
+    <dimen name="marginLogo">10dp</dimen>
+    <dimen name="marginTextView">10dp</dimen>
+    <dimen name="marginTopLayoutPrecios">2dp</dimen>
+    <dimen name="marginLeftPrecios">20dp</dimen>
+    <dimen name="marginLabelsPrecio">5dp</dimen>
+    <dimen name="nav_header_vertical_spacing">8dp</dimen>
+    <dimen name="nav_header_height">176dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
