--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -3,7 +3,7 @@
     <gradient
         android:angle="-45"
         android:centerColor="@color/colorPrimary"
-        android:endColor="@color/colorPrimaryDark"
+        android:endColor="@color/colorAccent"
         android:startColor="@color/colorPrimary"
         android:type="linear" />
 </shape>
