--- a/app/src/main/res/layout/fragment_grupos.xml
+++ b/app/src/main/res/layout/fragment_grupos.xml
@@ -27,5 +27,12 @@
             android:theme="@style/AppTheme.NoActionBar" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:src="@android:drawable/ic_menu_add"
+        android:layout_margin="16dp" />
 
 </FrameLayout>
